build: exclude test config files from dist output

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,15 +2,25 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "ESNext",
-    "lib": ["DOM", "ESNext"],
+    "lib": [
+      "DOM",
+      "ESNext"
+    ],
     "declaration": true,
     "outDir": "dist",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "moduleResolution": "Node",
-    "types": ["node"]
+    "types": [
+      "node"
+    ]
   },
-  "include": ["src", "vitest.config.ts"],
-  "exclude": ["node_modules", "dist"]
+  "include": [
+    "src"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
