--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "@technway/rvnjs",
-  "version": "0.1.22",
-  "main": "dist/index.js",
+  "version": "0.1.221",
   "description": "Minimal utility functions for Vite + React, and Next.js",
   "author": {
     "name": "Technway Solutions",
     "url": "https://technway.biz"
   },
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -38,7 +40,7 @@
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "format:check": "prettier --check \"src/**/*.{ts,tsx}\"",
     "type-check": "tsc --noEmit",
-    "clean": "node -e \"if (require('fs').existsSync('dist')) require('fs').rmSync('dist', { recursive: true, force: true })\"",
+    "clean": "rmdir /s /q dist 2>nul || echo Dist directory not found",
     "prebuild": "pnpm run clean",
     "prepare": "husky",
     "prepublishOnly": "pnpm run build && pnpm run test && pnpm run type-check",
@@ -80,7 +82,6 @@
     }
   },
   "type": "module",
-  "types": "dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
