--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
       "ESNext"
     ],
     "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
     "outDir": "dist",
     "strict": true,
     "esModuleInterop": true,
@@ -14,7 +16,8 @@
     "moduleResolution": "Node",
     "types": [
       "node"
-    ]
+    ],
+    "rootDir": "src"
   },
   "include": [
     "src"
