--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "jsdom": "^26.1.0",
     "lint-staged": "^16.1.2",
     "prettier": "^3.5.3",
+    "release-please": "^17.1.0",
     "typescript": "^5.8.3",
     "vitest": "^3.2.3"
   },
